--- a/src/app/components/addmatchs/addmatchs.component.html
+++ b/src/app/components/addmatchs/addmatchs.component.html
@@ -22,7 +22,7 @@
               placeholder="score two" />
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" [(ngModel)]="match.teamone" name="teamone" placeholder="team one" />
+            <input type="text" class="form-control" [(ngModel)]="match.teamone" name="teamone" placeholder="team One" />
           </div>
           <div class="form-group">
             <input type="text" class="form-control" [(ngModel)]="match.teamtwo" name="teamtwo" placeholder="team two" />
@@ -35,8 +35,8 @@
               </div>
               <select class="custom-select" id="inputGroupSelect03" (change)="onSelect($event)"
                 aria-label="Example select with button addon">
-                <     >
-                <option value="1"></option>
+                <>
+                  <option value="1"></option>
 
               </select>
             </div>
